--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "dotenv": "^16.4.5",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
