--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "sequelize": "sequelize"
+    "sequelize": "sequelize",
+    "migration:generate": "sequelize migration:generate --name",
+    "migration:run": "sequelize db:migrate"
   },
   "dependencies": {
     "@nest-lab/throttler-storage-redis": "^1.0.0",
