--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nest-lab/throttler-storage-redis": "^1.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/throttler": "^6.2.1",
