--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "ioredis": "^5.4.1",
+    "pdfmake": "^0.2.15",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -53,6 +54,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/pdfmake": "^0.2.9",
     "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^10.0.0",
