--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "migration:run": "sequelize db:migrate"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.2",
     "@nest-lab/throttler-storage-redis": "^1.0.0",
+    "@nestjs/apollo": "^12.2.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.2.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.1",
@@ -34,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "graphql": "^16.9.0",
     "ioredis": "^5.4.1",
     "pdfmake": "^0.2.15",
     "pg": "^8.13.1",
