--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path');
 
 module.exports = {
-  config: path.resolve('sequelize', 'sequelize.config.js'),
+  config: path.resolve('sequelize', 'sequelize.config.mjs'),
   'models-path': path.join('src', 'Domain', 'Entities'),
   'seeders-path': path.join('sequelize', 'seeders'),
   'migrations-path': path.join('sequelize', 'migrations'),
