--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6",
     "short-unique-id": "^5.2.0",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
