--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "dependencies": {
     "@apollo/server": "^4.11.2",
     "@nest-lab/throttler-storage-redis": "^1.0.0",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/apollo": "^12.2.1",
+    "@nestjs/bullmq": "^10.2.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.2.1",
@@ -35,12 +37,14 @@
     "@nestjs/swagger": "^8.0.7",
     "@nestjs/throttler": "^6.2.1",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.30.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
     "graphql-type-json": "^0.3.2",
     "ioredis": "^5.4.1",
+    "nodemailer": "^6.9.16",
     "pdfmake": "^0.2.15",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
@@ -61,6 +65,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/pdfmake": "^0.2.9",
     "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.0",
